--- a/config/live/hypr/hyprland.conf
+++ b/config/live/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor=,preferred,auto,1.0
 # Set programs that you use
 $terminal = alacritty
 $fileManager = thunar
-$browser = brave
+$browser = zen-browser
 $menu = rofi -show drun
 
 
